# juicypolicy

./: .gitignore  index.html  package-lock.json  package.json
backend/: modal_app.py  pyproject.toml  quote_worker.py  requirements.txt
backend/app/: agent_auth.py  database.py  healthsherpa_service.py  main.py  models.py  quote_service.py  schemas.py
frontend/: tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  Header.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/contexts/: AgentAuthContext.tsx  AuthContext.tsx
frontend/src/lib/: chatBus.ts
frontend/src/pages/: AboutPage.tsx  AgentQuotePage.tsx  AgentsMarketingPage.tsx  AgentsPage.tsx  LandingPage.tsx  LoginPage.tsx  QuotePage.tsx
src/: App.tsx  index.css
src/components/: ChatInterface.tsx  Header.tsx
src/components/ui/: badge.tsx  card.tsx
src/pages/: AboutPage.tsx  AgentsPage.tsx  LandingPage.tsx  LoginPage.tsx  QuotePage.tsx
